table with content inside

--- a/main.html
+++ b/main.html
@@ -61,9 +61,28 @@
   <a href="#">Faculty 4</a>
 </div>
 
-<footer class="pt-2 font-small text-white" style="background-color:#00A17F">
+<footer class="pt-3 font-small text-white" style="background-color:#00A17F">
+	<!--begining of the footer-->
 	<div class="container">
-		<p align = "center" > Footer info</p>
+		<div class="row">
+			<div class="col-md-7"><!--Using .col-md-* classes, you can create a basic grid system of max 12 column. 
+				So here it's 7/12 and it becomes horizontal at the medium breakpoint (720px)-->
+				<ul>email</ul>
+				<ul>address of the school</ul>
+				<ul>phone of the school</ul>
+			</div>
+			<div class="col-md-5"><!--Using .col-md-5 you complete the 12 column-->
+					CONTACT FORM
+					<div class="container">
+						<div class="row">
+							container to put your email
+						</div>
+						<div class="row">
+							container to put your message don't forget to add a button send
+						</div>
+					</div>
+			</div>
+		</div>
 	</div>
 	<div class="w-auto py-3 text-center text-white-50" style="background-color:#005551">
 	<!-- Copyright -->
