--- a/main.html
+++ b/main.html
@@ -64,14 +64,16 @@
 <footer class="pt-3 font-small text-white" style="background-color:#00A17F">
 	<!--begining of the footer-->
 	<div class="container">
-		<div class="row">
-			<div class="col-md-7"><!--Using .col-md-* classes, you can create a basic grid system of max 12 column. 
-				So here it's 7/12 and it becomes horizontal at the medium breakpoint (720px)-->
+		<div class="row mx-md-n5">
+			<div class="col-md-7 px-md-5"><!--Using .col-md-* classes, you can create a basic grid system of max 12 column. 
+				So here it's 7/12 and it becomes horizontal at the medium breakpoint (720px)
+				the padding is also increase at the medium breakpoint with px-md-5-->
 				<ul>email</ul>
 				<ul>address of the school</ul>
 				<ul>phone of the school</ul>
+				<ul>link of the RTU's website</ul>
 			</div>
-			<div class="col-md-5"><!--Using .col-md-5 you complete the 12 column-->
+			<div class="col-md-5 px-md-5"><!--Using .col-md-5 you complete the 12 column-->
 					CONTACT FORM
 					<div class="container">
 						<div class="row">
