--- a/main.html
+++ b/main.html
@@ -29,8 +29,34 @@
   background-color: #005551;
   color: white;
 }
+.w3-top a{
+  background-color: #00A17F;
+}
+.w3-red{
+  color:#fff!important;
+  background-color:#00A17F!important;
+}
+.w3-white{
+  background-color: #005551!important;
+  color:#fff!important;
+}
 </style>
 </head>
+<body>
+
+<div class="w3-top">
+  <div class="w3-bar w3-red w3-card w3-left-align w3-large">
+    <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-red" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large w3-white" style="padding:16px 128px!important">FindYourRTU</a>
+    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white" style="padding:16px 64px!important">About</a>
+    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white" style="padding:16px 64px!important">Help</a>
+  </div>
+</div>
+
+
+<header class="w3-container w3-red w3-center" >
+  <img src="FindYourRTU_logo.jpg" alt="boat" style="width:110%;min-height:100px;max-height:600px;">
+</header>
 <body>
 
 <header>
