--- a/main.html
+++ b/main.html
@@ -64,26 +64,14 @@
 
 <div class="allFaculties">
   <a href="#" class="active">Our Faculties</a>
-  <a href="#">Faculty 1</a>
-  <a href="#">Faculty 2</a>
-  <a href="#">Faculty 3</a>
-  <a href="#">Faculty 4</a>
-   <a href="#">Faculty 1</a>
-  <a href="#">Faculty 2</a>
-  <a href="#">Faculty 3</a>
-  <a href="#">Faculty 4</a>
-   <a href="#">Faculty 1</a>
-  <a href="#">Faculty 2</a>
-  <a href="#">Faculty 3</a>
-  <a href="#">Faculty 4</a>
-   <a href="#">Faculty 1</a>
-  <a href="#">Faculty 2</a>
-  <a href="#">Faculty 3</a>
-  <a href="#">Faculty 4</a>
-   <a href="#">Faculty 1</a>
-  <a href="#">Faculty 2</a>
-  <a href="#">Faculty 3</a>
-  <a href="#">Faculty 4</a>
+  <a href="PAGES/FacultyofArchitecture.html">Faculty of Architecture</a>
+  <a href="PAGES/FacultyofCivilEngineering.html">Faculty of Civil Engineering</a>
+  <a href="PAGES/FacultyofComputerScienceandInformationTechnology.html">Faculty of Computer Science and Information Technology</a>
+  <a href="PAGES/FacultyofE-LearningTechnologiesandHumanities.html">Faculty of E-Learning Technologies and Humanities</a>
+   <a href="PAGES/FacultyofEngineeringEconomicsandManagement.html">Faculty of Engineering Economics and Management</a>
+  <a href="PAGES/FacultyofMaterialsScienceandAppliedChemistry.html">Faculty of Materials Science and Applied Chemistry</a>
+  <a href="PAGES/FacultyofMechanicalEngineeringTransportandAeronautics.html">Faculty of Mechanical Engineering, Transport and Aeronautics</a>
+  <a href="PAGES/FacultyofPowerandElectricalEngineering.html">Faculty of Power and Electrical Engineering</a>
 </div>
 
 <footer class="pt-3 font-small text-white" style="background-color:#00A17F">
