--- a/main.html
+++ b/main.html
@@ -14,6 +14,7 @@
 <style>
 .allFaculties {
   width: 200px;
+  float:left;
 }
 
 .allFaculties a {
@@ -43,6 +44,170 @@
 .w3-white{
   background-color: #005551!important;
   color:#fff!important;
+}
+
+/* Body */
+
+.info {
+    font-size: 20px;
+    margin-bottom: 50px;
+    margin-top: 50px;
+    display: block;
+}
+
+.slideshow {
+    max-width: 900px;
+    height: auto;
+    display: block;
+    margin-left: 10%;
+    float: left;
+}
+
+.image {
+    max-width: 100%;
+    height: auto;
+    border: 3px solid black;
+}
+
+.button-left {
+    font-size: 25px;
+    background-color: black;
+    color: white;
+    border: none;
+    margin: 5px;
+    text-align: center;
+}
+
+.button-left:hover {
+    background-color: white;
+    color: black;
+    border: 1px solid black;
+}
+
+.button-right {
+    font-size: 25px;
+    background-color: black;
+    color: white;
+    border: none;
+    margin: 5px;
+    text-align: center;
+}
+
+.button-right:hover {
+    background-color: white;
+    color: black;
+    border: 1px solid black;
+}
+
+/* Footer */
+
+.footer {
+    display: inline-block;
+    width: 100%;
+    left: 0;
+    background-color: #015551;
+}
+
+.column1 {
+    float: left;
+    width: 30%;
+}
+
+.column2 {
+    float: left;
+    width: 30%;
+}
+
+.column3 {
+    float: left;
+    width: 30%;
+}
+
+.first-column {
+    border-right: solid floralwhite;
+    padding-right: 60px;
+
+}
+
+.first-column-item {
+    font-size: 18px;
+    padding-bottom: 5px;
+    list-style-type: none;
+    color: white;
+
+}
+
+#header {
+    padding-bottom: 10px;
+    font-size: 24px;
+    font-family: serif;
+}
+
+.second-column {
+    padding-right: 60px;
+    padding-bottom: 27px;
+    border-right: solid floralwhite;
+    text-align: center;
+}
+
+.second-column-item {
+    display: inline-block;
+    padding: 25px;
+    font-size: 20px;
+    padding-top: 40px;
+    list-style-type: none;
+    color: white;
+
+}
+
+.second-column-item:hover {
+    text-decoration: underline;
+}
+
+.third-column {
+    list-style-type: none;
+    display: inline-block;
+    float: right;
+    margin-right: -30px;
+}
+
+.third-column-item {
+    margin-bottom: 3px;
+    display: block;
+    color: white;
+}
+
+.third-column-item:first-child {
+    color: white;
+    font-size: 20px;
+    float: left;
+    margin-bottom: 8px;
+}
+
+.third-column-item:last-child {
+    float: right;
+    margin-top: 3px;
+}
+
+.contact {
+    display: inline-block;
+    float: left;
+    font-size: 15px;
+    color: white;
+    margin-left: 25px;
+    margin-top: 20px;
+}
+
+.copyright {
+    display: inline-block;
+    background-color: #004239;
+    width: 100%;
+    left: 0;
+    text-align: center;
+    color: white;
+    font-size: 18px;
+    margin-top: -4px;
+
 }
 </style>
 </head>
@@ -75,52 +240,90 @@
   <a href="PAGES/FacultyofPowerandElectricalEngineering.html">Faculty of Power and Electrical Engineering</a>
 </div>
 
-<footer class="pt-3 font-small text-white" style="background-color:#00A17F">
-	<!--begining of the footer-->
-	<div class="container">
-		<div class="row mx-md-n5">
-			<div class="col-md-5 px-md-4"><!--Using .col-md-* classes, you can create a basic grid system of max 12 column. 
-				So here it's 7/12 and it becomes horizontal at the medium breakpoint (720px)
-				the padding is also increase at the medium breakpoint with px-md-5-->
-				<ul>email</ul>
-				<ul>address of the school</ul>
-				<ul>phone of the school</ul>
-				<ul>link of the RTU's website</ul>
-			</div>
-			<div class="col-md-7 px-md-4"><!--Using .col-md-5 you complete the 12 column-->
-				<h4 class="font-weight-bold">CONTACT FORM</h2>
-				<p>Do you have any questions? Please do not hesitate to contact us.</p>
-				<!--contact form-->
-				<form id="contact-form" name="contact-form" action="mail.php" method="POST">
-					<div class="md-form">
-						<!--name-->
-						<input type="text" id="name" name="name" class="form-control p-2 mb-2" placeholder="Name">
-						<!--e-mail-->
-						<input type="email" id="email" name="email" class="form-control p-2 mb-2" placeholder="E-mail">
-						<!--subject-->
-						<input type="text" id="subject" name="subject" class="form-control mb-2" placeholder="Subject">
-						<!--message-->
-						<textarea type="text" id="message" name="message" rows="2" class="form-control mb-2 md-textarea" placeholder="Your message"></textarea>
-					</div>
-				</form>
-				 <div class="text-center text-md-right">
-					<a class="btn text-dark btn-light mb-2" onclick="validateForm();">Send</a>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="w-auto py-3 text-center text-white-50" style="background-color:#005551">
-	<!-- Copyright -->
-	© <span id="this_year"></span>
-		<!-- code to print the current year -->
-		<script type="text/javascript">
-			var today=new Date();
-			var annee = today.getFullYear();
-			var sannee = document.getElementById('this_year');
-			sannee.innerHTML = annee;
-		</script>
-		FindYourRTU
-</div>
+<div class=info> <!--site introduction text-->
+        <p  align="center">Welcome to FindYourRTU.com here you can find every faculty building and its location in Riga Technical University.</p>
+    </div>
+
+    <div class="slideshow" align="center"><!--images for the slideshow-->
+        <img class="image" src="https://www.rtu.lv/writable/public_files/RTU_rtu_eef.jpg" alt="" >
+        <img class="image" src="https://www.rtu.lv/writable/public_files/RTU_rtu_buvniecibas_un_inzenierzinatnes_fakultate.jpg" alt="" >
+        <img class="image" src="https://www.rtu.lv/writable/public_files/RTU_rtu_inzenierekonomikas_un_vadibas_fakultate.jpg" alt="" >
+        <img class="image" src="https://www.rtu.lv/writable/public_files/RTU_transp.jpg" alt="" >
+
+        <button class="button-left" onclick="plusdivs(-1)">&#10094;</button>
+        <button class="button-right" onclick="plusdivs(1)">&#10095;</button>
+
+    </div>
+    
+    <!--slideshow script-->
+    <script> 
+        var slideindex = 1;
+        showDivs(slideindex);
+
+        function plusdivs(n) {
+            showDivs(slideindex += n);
+        }
+
+        function showDivs(n) {
+            var i;
+            var x = document.getElementsByClassName("image");
+            if (n > x.length) {
+                slideindex = 1
+            }
+            if (n < 1) {
+                slideindex = x.length
+            }
+            for (i = 0; i < x.length; i++) {
+                x[i].style.display = "none";
+            }
+            x[slideindex - 1].style.display = "block";
+        }
+
+    </script>
+    <!--end of slideshow script-->
+
+<footer>
+    <div class="footer">
+
+            <div class="column1">
+                <ul class="first-column">
+                    <li id=header class="first-column-item">Contacts</li>
+                    <li class="first-column-item">1 Kalku Street
+                        Riga LV-1658
+                        Latvia</li>
+                    <li class="first-column-item">+371 61089333</li>
+                    <li class="first-column-item">info@rtu.lv</li>
+                </ul>
+            </div>
+
+            <div class="column2">
+                <ul class="second-column">
+                    <li class="second-column-item"><a href=""></a>Home</li>
+                    <li class="second-column-item"><a href=""></a>About Us</li>
+                </ul>
+            </div>
+
+            <div class="column3" align="center">
+               <div class="contact">
+                        <p>Do you have any questions?<br> Feel free  to contact us.</p>
+                    </div>
+                <ul class=third-column>
+                   <li class="third-column-item">Contact Us</li>
+                    <li class="third-column-item"><input type="text" placeholder="Name" height="20px"></li>
+                    <li class="third-column-item"><input type="text" placeholder="E-mail"></li>
+                    <li class="third-column-item"><input type="text" placeholder="Topic"></li>
+                    <li class="third-column-item"><input type="text" placeholder="message"></li>
+                    <li class="third-column-item"><input type="button" value="Send"></li>
+                </ul>
+
+
+            </div>
+
+        </div>
+
+        <div class="copyright">
+            <p>FindYourRTU.com</p>
+        </div>
 </footer>
  <!-- SCRIPTS -->
     <!-- JQuery -->
