--- a/PAGES/FacultyofE-LearningTechnologiesandHumanities.html
+++ b/PAGES/FacultyofE-LearningTechnologiesandHumanities.html
@@ -47,15 +47,16 @@
 
 <div id="allFaculties" class="col-md-2" style="border: 1px solid #005551">
   <a href="#" class="active">Our Faculties</a>
-  <a href="PAGES/FacultyofArchitecture.html">Faculty of Architecture</a>
-  <a href="PAGES/FacultyofCivilEngineering.html">Faculty of Civil Engineering</a>
-  <a href="PAGES/FacultyofComputerScienceandInformationTechnology.html">Faculty of Computer Science and Information Technology</a>
-  <a href="PAGES/FacultyofE-LearningTechnologiesandHumanities.html">Faculty of E-Learning Technologies and Humanities</a>
-   <a href="PAGES/FacultyofEngineeringEconomicsandManagement.html">Faculty of Engineering Economics and Management</a>
-  <a href="PAGES/FacultyofMaterialsScienceandAppliedChemistry.html">Faculty of Materials Science and Applied Chemistry</a>
-  <a href="PAGES/FacultyofMechanicalEngineeringTransportandAeronautics.html">Faculty of Mechanical Engineering, Transport and Aeronautics</a>
-  <a href="PAGES/FacultyofPowerandElectricalEngineering.html">Faculty of Power and Electrical Engineering</a>
+  <a href="../PAGES/FacultyofArchitecture.html">Faculty of Architecture</a>
+  <a href="../PAGES/FacultyofCivilEngineering.html">Faculty of Civil Engineering</a>
+  <a href="../PAGES/FacultyofComputerScienceandInformationTechnology.html">Faculty of Computer Science and Information Technology</a>
+  <a href="../PAGES/FacultyofE-LearningTechnologiesandHumanities.html">Faculty of E-Learning Technologies and Humanities</a>
+   <a href="../PAGES/FacultyofEngineeringEconomicsandManagement.html">Faculty of Engineering Economics and Management</a>
+  <a href="../PAGES/FacultyofMaterialsScienceandAppliedChemistry.html">Faculty of Materials Science and Applied Chemistry</a>
+  <a href="../PAGES/FacultyofMechanicalEngineeringTransportandAeronautics.html">Faculty of Mechanical Engineering, Transport and Aeronautics</a>
+  <a href="../PAGES/FacultyofPowerandElectricalEngineering.html">Faculty of Power and Electrical Engineering</a>
 </div>
+
 
         <!--============================================================FOOTER===============================================================-->
  <div  class="col-md-12">
