--- a/PAGES/FacultyofCivilEngineering.html
+++ b/PAGES/FacultyofCivilEngineering.html
@@ -14,7 +14,7 @@
 
         <header class="col-md-12" >
             <div class="right">
-                <a href="PAGES\Help.html"> Help </a>
+                <a href="../PAGES/help.html"> Help </a>
             </div>
         </header>
     </div>
