Faculty of Electronics and Telecommunications added

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
   <a href="PAGES/FacultyofMaterialsScienceandAppliedChemistry.html">Faculty of Materials Science and Applied Chemistry</a>
   <a href="PAGES/FacultyofMechanicalEngineeringTransportandAeronautics.html">Faculty of Mechanical Engineering, Transport and Aeronautics</a>
   <a href="PAGES/FacultyofPowerandElectricalEngineering.html">Faculty of Power and Electrical Engineering</a>
+  <a href="PAGES/FacultyofElectronicsandTelecommunications.html">Faculty of Electronics and Telecommunications</a>
 </div>
 <div class = "col-md-10" >
     <div class="slideshow-container">
