--- a/PAGES/FacultyofEngineeringEconomicsandManagement.html
+++ b/PAGES/FacultyofEngineeringEconomicsandManagement.html
@@ -55,6 +55,7 @@
   <a href="../PAGES/FacultyofMaterialsScienceandAppliedChemistry.html">Faculty of Materials Science and Applied Chemistry</a>
   <a href="../PAGES/FacultyofMechanicalEngineeringTransportandAeronautics.html">Faculty of Mechanical Engineering, Transport and Aeronautics</a>
   <a href="../PAGES/FacultyofPowerandElectricalEngineering.html">Faculty of Power and Electrical Engineering</a>
+  <a href="../PAGES/FacultyofElectronicsandTelecommunications.html">Faculty of Electronics and Telecommunications</a>
 </div>
 
         <!--============================================================FOOTER===============================================================-->
