--- a/PAGES/help.html
+++ b/PAGES/help.html
@@ -61,11 +61,10 @@
 <div class = "col-md-10" >
     <div id = "helpMe">
     <h1>What is FINDYOURRTU.com</h1>
-    <p>"FindYourRtu" is an initiative created by Erasmus students from RTu, specifically from the Faculty of Informatics. We all feel lost in the first days since it is a new city, a new university, with many faculties and many entrances, we usually resort to Google Maps but sometimes it is not enough for that reason we have created this website where all the faculties are of the RTU and their respective accesses. This will serve especially new students but also those students who need information from a specific faculty that they do not know.</p>
-    <br>
+    <p>"FindYourRTU" is an initiative created by Erasmus students(Spring Semester 2020) from RTU(Riga Technical University), specifically from the Computer Science and Information Technology. We all felt lost in the first days of our semester since it is a new city, a new university, with many faculties and many entrances. For this we usually resorted to Google Maps but sometimes it was not enough helpful. For that reason we have created this website where are all the faculties of the RTU and their respective accesses. It will serve especially to new students but also those students who need information from a specific faculty that they do not know.</p>
     <br>
     <h1>How to use it</h1>
-    <p>The use is very simple, just select the faculty on which you need information, then check the location of the tickets with the link to Google Maps, it also has photos on the location of the same, thus allowing you to answer questions that may appear if you only we take into account Google Maps.</p>
+    <p>The use our website is very simple, just select the faculty on which you need information or search it by name, then check the location that links you to Google Maps, it also has pictures of each entrance door and the location of it, thus allowing you to answer questions that may appear to you only if you are trying to use just Google Maps.</p>
 </div>
 
 </div>
