--- a/PAGES/help.html
+++ b/PAGES/help.html
@@ -4,7 +4,8 @@
             <link rel="stylesheet" type="text/css" href="../CSS/about.css">
             <link rel="stylesheet" type="text/css" href="../CSS/header.css">
             <link rel="stylesheet" type="text/css" href="../CSS/footer.css">
-           <link rel="stylesheet" type="text/css" href="../CSS/menu.css"> 
+           <link rel="stylesheet" type="text/css" href="../CSS/menu.css">
+           <link rel="stylesheet" type="text/css" href="../CSS/help.css"> 
             <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         </head>
         <body>
@@ -57,8 +58,17 @@
   <a href="../PAGES/FacultyofPowerandElectricalEngineering.html">Faculty of Power and Electrical Engineering</a>
   <a href="../PAGES/FacultyofElectronicsandTelecommunications.html">Faculty of Electronics and Telecommunications</a>
 </div>
+<div class = "col-md-10" >
+    <div id = "helpMe">
+    <h1>What is FINDYOURRTU.com</h1>
+    <p>"FindYourRtu" is an initiative created by Erasmus students from RTu, specifically from the Faculty of Informatics. We all feel lost in the first days since it is a new city, a new university, with many faculties and many entrances, we usually resort to Google Maps but sometimes it is not enough for that reason we have created this website where all the faculties are of the RTU and their respective accesses. This will serve especially new students but also those students who need information from a specific faculty that they do not know.</p>
+    <br>
+    <br>
+    <h1>How to use it</h1>
+    <p>The use is very simple, just select the faculty on which you need information, then check the location of the tickets with the link to Google Maps, it also has photos on the location of the same, thus allowing you to answer questions that may appear if you only we take into account Google Maps.</p>
+</div>
 
-
+</div>
         <!--============================================================FOOTER===============================================================-->
  <div  class="col-md-12">
          <footer class="col-md-12">
