Faculty of Economics finished

--- a/PAGES/FacultyofComputerScienceandInformationTechnology.html
+++ b/PAGES/FacultyofComputerScienceandInformationTechnology.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
  <head>
+            <!-- Neww -->
             <link rel="stylesheet" type="text/css" href="../CSS/fcs.css">
             <link rel="stylesheet" type="text/css" href="../CSS/about.css">
             <link rel="stylesheet" type="text/css" href="../CSS/header.css">
