--- a/PAGES/aboutUs.html
+++ b/PAGES/aboutUs.html
@@ -49,10 +49,95 @@
     <h1>Our Team</h1>
     <span class="border"></span>
     <div class="photo">
+      <div class = "verone">
+      <div id = "#verone" class="col-md-3">
       <a href="#verona"><img src="../IMAGES/verona.jpg"  height="170px" width="200" alt="Verone Kadriu"></a>
+       <div class="overlay">
+      <div class="text">Veronë Kadriu<br>Project Leader <br> Kosovo</div>
+    </div>
+  </div>
+    </div>
+    <div class="blerta">
+    <div class="col-md-3">
       <a href="#blerta"><img src="../IMAGES/Blerta.jpg"  height="170px" width="200" alt="Blerta Jashari"></a>
+      <div class="overlay">
+      <div class="text">Blerta Jashari<br>Frontend TeamLeader<br>Kosovo</div>
+    </div>
+  </div>
+    </div>
+    <div class ="raul">
+    <div class="col-md-3">
       <a href="#Raul"><img src="../IMAGES/Raul.jpeg" height="170px" width="200" alt="Raul Espin"></a>
+      <div class="overlay">
+        <div class="text">Raul Espin<br>Administration TeamLeader<br>Spain</div>
+      </div>
+    </div>
+  </div>
+  <div class ="fatma">
+    <div class="col-md-3">
       <a href="#Cheima"><img src="../IMAGES/Fatma.jpg"  height="180px" width="200" alt="Cheimaa "></a>
+       <div class="overlay">
+        <div class="text">Abdellali Fatma Chaima<br>Backend TeamLeader<br></div>
+      </div>
+    </div>
+    </div>
+      <br>
+      <div class ="lucas">
+    <div class="col-md-2">
+     <a href="#judickaelle"><img src="../IMAGES/judickaelle.jpg"  height="170px" width="200" alt="Blerta Jashari"></a>
+      <div class="overlay">
+        <div class="text">Judickaelle Pelletier<br>France</div>
+      </div>
+    </div>
+  </div>
+  <div class ="lucas">
+    <div class="col-md-2">
+      <a href="#nini"><img src="../IMAGES/nini.jpg" height="170px" width="200" alt="Raul Espin"></a>
+      <div class="overlay">
+        <div class="text">Nini Kvatchantiradze<br>Georgia</div>
+      </div>
+    </div>
+  </div>
+  <div class ="lucas">
+    <div class="col-md-2">
+      <a href="#mert"><img src="../IMAGES/mert.jpg"  height="180px" width="200" alt="Cheimaa "></a>
+      <div class="overlay">
+        <div class="text">Yunus Mert Ḉakar<br>Turkey</div>
+      </div>
+    </div>
+  </div>
+  <div class ="lucas">
+    <div class="col-md-2">
+      <a href="#mehmet"><img src="../IMAGES/mehmet.jpg"  height="180px" width="200" alt="Cheimaa "></a>
+      <div class="overlay">
+        <div class="text">Mehmet Gösterici<br>Turkey</div>
+      </div>
+    </div>
+  </div>
+  <div class ="lucas">
+    <div class="col-md-2">
+       <a href="#kare"><img src="../IMAGES/kare.png"  height="180px" width="200" alt="Cheimaa "></a>
+      <div class="overlay">
+        <div class="text">Soufiane Kara<br>Algeria</div>
+      </div>
+    </div>
+  </div>
+  <div class ="lucas">
+    <div class="col-md-2">
+       <a href="#kare"><img src="../IMAGES/lucas.jpg"  height="180px" width="200" alt="Cheimaa "></a>
+      <div class="overlay">
+        <div class="text">Lucas Chauvigné<br>France</div>
+      </div>
+    </div>
+  </div>
+  <div class ="lucas">
+    <div class="col-md-2">
+       <a href="#kare"><img src="../IMAGES/marine.jpg"  height="180px" width="200" alt="Cheimaa "></a>
+      <div class="overlay">
+        <div class="text">Marine Delcroix <br>France</div>
+      </div>
+    </div>
+  </div>     
 </div>
 <div class="team" id="verona">
   <span class="name">Veronë Kadriu</span>
