--- a/PAGES/aboutUs.html
+++ b/PAGES/aboutUs.html
@@ -54,7 +54,7 @@
             </div>
         </div>
         </div>
-
+    </div>
         <!--=========================================================/NAVBAR====================================================-->
 <div class="col-md-12" id="our-team">
         
@@ -89,7 +89,7 @@
     <div class="col-md-3">
       <a href="#Cheima"><img src="../IMAGES/Fatma.jpg"  height="180px" width="200" alt="Cheimaa "></a>
        <div class="overlay">
-        <div class="text">Abdellali Fatma Chaima<br>Backend TeamLeader<br></div>
+        <div class="text">Abdellali Fatma Chaima<br>Backend TeamLeader<br>Algeria</div>
       </div>
     </div>
     </div>
@@ -122,7 +122,7 @@
     <div class="col-md-2">
       <a href="#mehmet"><img src="../IMAGES/mehmet.jpg"  height="180px" width="200" alt="Cheimaa "></a>
       <div class="overlay">
-        <div class="text">Mehmet Gösterici<br>Turkey</div>
+        <div class="text">Mehmet Efe Gösterici<br>Turkey</div>
       </div>
     </div>
   </div>
@@ -149,44 +149,22 @@
         <div class="text">Marine Delcroix <br>France</div>
       </div>
     </div>
+  </div>  
+  <div class ="lucas">
+    <div class="col-md-2">
+       <a href="#kare"><img src="../IMAGES/giovanni.jpg"  height="180px" width="200" alt="Cheimaa "></a>
+      <div class="overlay">
+        <div class="text">Giovanni Pelloso Gasparetto <br>Brasil</div>
+      </div>
+    </div>
   </div>     
 </div>
-<div class="team" id="verona">
-  <span class="name">Veronë Kadriu</span>
-  <span class="border"></span>
-  <p align = "center">
-     Project Leader <br> University of Prishtina <br> Kosovo
-  </p>
+
+ 
+
+
 </div>
-  <div class="team" id="blerta">
-  <span class="name">Blerta Jashari</span>
-  <span class="border"></span>
-  <p align = "center">
-     Team Leader of FRONTEND <br> 
-    Univeristy of Prishtina <br>
-     Kosovo
-   
-  </p>
-</div>
-  <div class="team" id="Raul">
-  <span class="name">Raúl Espín Paredes</span>
-  <span class="border"></span>
-  <p align="center">
-    Team Leader of ADMINISTRATION <br>
-     University of Murcia <br>
-     Spain
-  </p>
-</div>
-  <div class="team" id="Cheima">
-  <span class="name">Abdellali Fatma Chaima</span>
-  <span class="border"></span>
-  <p align="center">
-   Team Leader of BACKEND <br>
-   
-  </p>
-</div>
-</div>
-</div>
+
 
 
 <!--============================================================FOOTER===============================================================-->
