Updated links for about

--- a/PAGES/FacultyofArchitecture.html
+++ b/PAGES/FacultyofArchitecture.html
@@ -50,7 +50,7 @@
                         </li>
                         <li id="nav1">
                         <div class="col-md-12">
-                        <a href="../PAGES/AboutUs.html" class="cool-link">About us</a>
+                        <a href="../PAGES/aboutUs.html" class="cool-link">About us</a>
                         </div>
                         </li>
                     </ul>
