Updated name and picture of Faculty of Power and Electrical Engineering

--- a/PAGES/FacultyofCivilEngineering.html
+++ b/PAGES/FacultyofCivilEngineering.html
@@ -71,7 +71,7 @@
   <a href="../PAGES/FacultyofEngineeringEconomicsandManagement.html">Faculty of Engineering Economics and Management</a>
   <a href="../PAGES/FacultyofMaterialsScienceandAppliedChemistry.html">Faculty of Materials Science and Applied Chemistry</a>
   <a href="../PAGES/FacultyofMechanicalEngineeringTransportandAeronautics.html">Faculty of Mechanical Engineering, Transport and Aeronautics</a>
-  <a href="../PAGES/FacultyofPowerandElectricalEngineering.html">Faculty of Power and Electrical Engineering</a>
+  <a href="../PAGES/FacultyofPowerandElectricalEngineering.html">Faculty of Electrical and Environmental Engineering</a>
   <a href="../PAGES/FacultyofElectronicsandTelecommunications.html">Faculty of Electronics and Telecommunications</a>
 </div>
 
