updated About us

--- a/PAGES/aboutUs.html
+++ b/PAGES/aboutUs.html
@@ -157,7 +157,15 @@
         <div class="text">Giovanni Pelloso Gasparetto <br>Brasil</div>
       </div>
     </div>
-  </div>     
+  </div>
+  <div class ="lucas">
+    <div class="col-md-2">
+       <a href="#kare"><img src="../IMAGES/imene.jpg"  height="180px" width="200" alt="Cheimaa "></a>
+      <div class="overlay">
+        <div class="text">Bennia Imene <br>Algeria</div>
+      </div>
+    </div>
+  </div>   
 </div>
 
  
