changed some links

--- a/PAGES/help.html
+++ b/PAGES/help.html
@@ -81,7 +81,7 @@
         <!--=========================================================/NAVBAR====================================================-->
 
 <div id="allFaculties" class="col-md-2" style="border: 1px solid #005551">
-  <a href="#" class="active">Our Faculties</a>
+  <a class="active">Our Faculties</a>
   <a href="../PAGES/FacultyofArchitecture.html">Faculty of Architecture</a>
   <a href="../PAGES/FacultyofCivilEngineering.html">Faculty of Civil Engineering</a>
   <a href="../PAGES/FacultyofComputerScienceandInformationTechnology.html">Faculty of Computer Science and Information Technology</a>
