--- a/PAGES/aboutUs.html
+++ b/PAGES/aboutUs.html
@@ -200,7 +200,7 @@
     <div class="col-md-2">
        <a href="#kare"><img src="../IMAGES/color.jpg"  height="180px" width="200" alt="Cheimaa "></a>
       <div class="overlay">
-        <div class="text">Diego <br>Spain</div>
+        <div class="text">Diego Olmos Pallarés <br>Spain</div>
       </div>
     </div>
   </div> 
